--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                       class="card-img"
                       width="150"
                       height="150"
-                      src="img/card-image-01.png"
+                      src="img/card-image-01.svg"
                       alt="Catering"
                     />
                     <a href="#" class="card-button button">Order cathering</a>
@@ -111,7 +111,7 @@
                       class="card-img"
                       width="150"
                       height="150"
-                      src="img/card-image-02.png"
+                      src="img/card-image-02.svg"
                       alt="Food"
                     />
                     <a href="#" class="card-button button">food menu</a>
@@ -125,7 +125,7 @@
                       class="card-img"
                       width="150"
                       height="150"
-                      src="img/card-image-03.png"
+                      src="img/card-image-03.svg"
                       alt="Gelato"
                     />
                     <a href="#" class="card-button button">Discover more</a>
